--- a/Mossalji/Mossalji.WPF/MyDrivers.xaml
+++ b/Mossalji/Mossalji.WPF/MyDrivers.xaml
@@ -1,10 +1,10 @@
-﻿<UserControl x:Class="Mossalji.WPF.MyOrders"
+﻿<UserControl x:Class="Mossalji.WPF.MyDrivers"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Mossalji.WPF"
-             xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+                         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
 
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
@@ -26,7 +26,7 @@
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-            <TextBlock Text="طلباتي" Foreground="#BE2525" FontSize="30" FontWeight="Bold" Margin="5" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center"/>
+            <TextBlock Text="السائقين" Foreground="#BE2525" FontSize="30" FontWeight="Bold" Margin="5" Grid.Row="0" Grid.Column="1" HorizontalAlignment="Center"/>
 
             <TextBox
   x:Name="NameTextBox"
@@ -45,42 +45,34 @@
   materialDesign:DataGridAssist.CellPadding="13 8 8 8"
   materialDesign:DataGridAssist.ColumnHeaderPadding="8" Background="#FFA91F1F">
                 <DataGrid.Columns>
-                    
+                 
                     <DataGridTextColumn 
-                        Width="2*"
-      Binding="{Binding ClientName}"
-      Header="اسم العميل (صاحب الطلب)   "
+                        Width="*"
+      Binding="{Binding DriverName}"
+      Header="اسم السائق "
       EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnEditingStyle}" />
                     <!-- if you want to use the pop up style (MaterialDesignDataGridTextColumnPopupEditingStyle), you must use MaterialDataGridTextColumn -->
                     <materialDesign:MaterialDataGridTextColumn
                         Width="*"
-      Binding="{Binding OrderType}"
-      Header=" نوع الطلب"
+      Binding="{Binding DriverStatus}"
+      Header=" حالة السائق"
       EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnPopupEditingStyle}" />
                     <!-- set a max length to get an indicator in the editor -->
                     <materialDesign:MaterialDataGridTextColumn
                          Width="*"
-      Binding="{Binding OrderStatus}"
+      Binding="{Binding CarNumber}"
 
-      Header="حالة الطلب"
+      Header="رقم السيارة"
       MaxLength="255"
       EditingElementStyle="{StaticResource MaterialDesignDataGridTextColumnPopupEditingStyle}" />
                     <materialDesign:MaterialDataGridComboBoxColumn
                          Width="*"
-      Header="محرر الطلب"
-      SelectedValueBinding="{Binding Employee}"
+      Header="حالة السيارة"
+      SelectedValueBinding="{Binding CarStatus }"
       ItemsSourceBinding="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}, Path=DataContext.Foods}" />
                     <!-- use custom combo box column to get better combos. Use ItemsSourceBinding as your binding template to be applied to each combo -->
-                    <materialDesign:MaterialDataGridComboBoxColumn
-                         Width="*"
-      Header="اسم السائق"
-      SelectedValueBinding="{Binding Delivery}"
-      ItemsSourceBinding="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}, Path=DataContext.Foods}" />
-                    <materialDesign:MaterialDataGridComboBoxColumn
-                         Width="2*"
-      Header="اسم الزبون (مستلم الطلب)"
-      SelectedValueBinding="{Binding CustomerName}"
-      ItemsSourceBinding="{Binding RelativeSource={RelativeSource FindAncestor, AncestorType={x:Type DataGrid}}, Path=DataContext.Foods}" />
+
+ 
                 </DataGrid.Columns>
             </DataGrid>
 
