Minor Modification in preperation for the second release

--- a/Mossalji/Mossalji.WPF/Control/AddDrivers.xaml
+++ b/Mossalji/Mossalji.WPF/Control/AddDrivers.xaml
@@ -73,7 +73,7 @@ FlowDirection="RightToLeft"
                                 Grid.Column="0"
                                 Style="{StaticResource MaterialDesignRaisedLightButton}"
                                 Width="100"
-                                ToolTip="Resource name: MaterialDesignRaisedLightButton" Background="#FFA91F1F" Foreground="#DDFFF5F5" Click="Save_Click">
+                                ToolTip="حفظ" Background="#FFA91F1F" Foreground="#DDFFF5F5" Click="Save_Click">
                         حفظ
                     </Button>
 
@@ -87,7 +87,7 @@ FlowDirection="RightToLeft"
                                 Grid.Column="2"
                                 Style="{StaticResource MaterialDesignRaisedLightButton}"
                                 Width="100"
-                                ToolTip="Resource name: MaterialDesignRaisedLightButton" Background="#FFA91F1F" Foreground="#DDFFF5F5">
+                                ToolTip="الغاء" Background="#FFA91F1F" Foreground="#DDFFF5F5">
                         الغاء
                     </Button>
                 </StackPanel>
