--- a/Mossalji/Mossalji.WPF/Pages/MyDrivers.xaml
+++ b/Mossalji/Mossalji.WPF/Pages/MyDrivers.xaml
@@ -109,27 +109,27 @@
                 Grid.Column="0"
                 Style="{StaticResource MaterialDesignRaisedLightButton}"
                 Width="100"
-                ToolTip="Resource name: MaterialDesignRaisedLightButton" Background="#FFA91F1F" Foreground="#DDFFF5F5">
+                ToolTip="عرض التفاصيل" Background="#FFA91F1F" Foreground="#DDFFF5F5">
                 تفاصيل
             </Button>
             <Button
                 x:Name="EditButton"
                 Grid.Row="3"
-                Grid.Column="1"
+                Grid.Column="2"
                 Style="{StaticResource MaterialDesignRaisedLightButton}"
                 Width="100"
                 Click="EditButton_Click"
-                ToolTip="Resource name: MaterialDesignRaisedLightButton" Background="#FFA91F1F" Foreground="#DDFFFFFF">
+                ToolTip="تعديل" Background="#FFA91F1F" Foreground="#DDFFFFFF">
                 تعديل
             </Button>
-            <Button
+            <!--<Button
                 Grid.Row="3"
                 Grid.Column="2"
                 Style="{StaticResource MaterialDesignRaisedLightButton}"
                 Width="100"
-                ToolTip="Resource name: MaterialDesignRaisedLightButton" Background="#FFA91F1F" Foreground="#DDFFFFFF">
+                ToolTip="الغاء" Background="#FFA91F1F" Foreground="#DDFFFFFF">
                 الغاء
-            </Button>
+            </Button>-->
         </Grid>
         <!--Fillter Side-->
         <local:AboveFillter 
@@ -197,7 +197,7 @@
                             Grid.Row="2"
                             Style="{StaticResource MaterialDesignRaisedLightButton}"
                             Width="150"                            
-                            ToolTip="Resource name: MaterialDesignRaisedLightButton" Background="#FFA91F1F" Foreground="#DDFFFFFF">
+                            ToolTip="اظهار الفلتر" Background="#FFA91F1F" Foreground="#DDFFFFFF">
                             فلترة النتائج
                         </Button>
                         <Button
@@ -207,7 +207,7 @@
                             Grid.Row="2"
                             Style="{StaticResource MaterialDesignRaisedLightButton}"
                             Width="150"                            
-                            ToolTip="Resource name: MaterialDesignRaisedLightButton" Background="#FFA91F1F" Foreground="#DDFFFFFF">
+                            ToolTip="الغاء الفلتر" Background="#FFA91F1F" Foreground="#DDFFFFFF">
                             الغاء
                         </Button>
                     </StackPanel>
