--- a/Mossalji/Mossalji.WPF/Login.xaml
+++ b/Mossalji/Mossalji.WPF/Login.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d"
          xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         FlowDirection="RightToLeft"
+        Loaded="Window_Loaded"
         Title="Login" Height="450" Width="800" 
         WindowStartupLocation="CenterScreen"
         Icon="helpers/pexels-photo-247885.png" 
